feat: Add Home Page and Contact Page
- Temporarily disable the WebLLM feature for performance optimization.
- Added text editor using TipTap
- Added contact api for email validation and profanity censoring.
- Added initial implementation of captcha.

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,11 +1,12 @@
 @import "./core.css";
 
 body {
+
     .text-primary {
         color: #2e7d32;
     }
 }
 
-/* .feather-shadow {
-    box-shadow: 0 4px 24px -8px rgba(0, 0, 0, 0.18);
-} */
+main {
+    contain: paint;
+}
