--- a/src/styles/css/core.css
+++ b/src/styles/css/core.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @import "tailwindcss";
 @plugin 'tailwindcss-rfs';
@@ -210,5 +211,9 @@
 
     .nunito-text {
         font-family: 'Nunito', system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
+    }
+
+    .poppins-text {
+        font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
     }
 }
