chore: override tailwind font size to be responsive using clamp

--- a/src/styles/css/core.css
+++ b/src/styles/css/core.css
@@ -8,6 +8,22 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+    --text-xs: clamp(0.5rem, 0.75rem + 0.01dvw + 0.01dvh, 100dvw);
+    --text-sm: clamp(0.625rem, 0.875rem + 0.03dvw + 0.03dvh, 100dvw);
+    --text-base: clamp(0.75rem, 1rem + 0.05dvw + 0.05dvh, 100dvw);
+    --text-lg: clamp(0.875rem, 1.125rem + 0.08dvw + 0.08dvh, 100dvw);
+    --text-xl: clamp(1rem, 1.25rem + 0.1dvw + 0.1dvh, 100dvw);
+    --text-2xl: clamp(1.125rem, 1.5rem + 0.15dvw + 0.15dvh, 100dvw);
+    --text-3xl: clamp(1.5rem, 1.875rem + 0.25dvw + 0.25dvh, 100dvw);
+    --text-4xl: clamp(1.75rem, 2.25rem + 0.18dvw + 0.15dvh, 100dvw);
+    --text-5xl: clamp(2.25rem, 3rem + 0.75dvw + 0.5dvh, 100dvw);
+    --text-6xl: clamp(3rem, 3.75rem + 1dvw + 0.5dvh, 100dvw);
+    --text-7xl: clamp(3.5rem, 4.5rem + 1.5dvw + 1dvh, 100dvw);
+    --text-8xl: clamp(6rem, 6.75rem + 2dvw + 1.5dvh, 100dvw);
+    --text-9xl: clamp(7rem, 8rem + 2.5dvw + 2dvh, 100dvw);
+}
+
 @theme inline {
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
