--- a/src/styles/css/core.css
+++ b/src/styles/css/core.css
@@ -237,3 +237,13 @@
         font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
     }
 }
+
+@theme inline {
+    --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+
+    @keyframes scroll {
+        to {
+            transform: translate(calc(-50% - 0.5rem));
+        }
+    }
+}
