chore: add iframe for pdf viewing

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -6,6 +6,12 @@ body {
         color: #2e7d32;
         color: oklch(0.5234 0.1347 144.17);
     }
+
+    @media print {
+        .print\:hidden {
+            display: none;
+        }
+    }
 }
 
 main {
