--- a/src/styles/css/core.css
+++ b/src/styles/css/core.css
@@ -155,7 +155,7 @@
 
 .dark {
     --background: oklch(0.1822 0 0);
-    --foreground: oklch(0.9288 0.0126 255.5078);
+    --foreground: oklch(92.386% 0.01887 83.026);
     --card: oklch(0.2046 0 0);
     --card-foreground: oklch(0.9288 0.0126 255.5078);
     --popover: oklch(0.2603 0 0);
