--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,5 +1,17 @@
 @import "./core.css";
 
+@import 'nprogress/nprogress.css';
+
+#nprogress .bar {
+    background: var(--primary);
+    height: 3px;
+}
+
+#nprogress .peg {
+    box-shadow: 0 0 10px var(--primary), 0 0 5px var(--primary);
+}
+
+
 body {
 
     .text-primary-dark {
